--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -23,6 +23,7 @@
         }
 
         .boxbar {
+            background: url(../background);
             width: 100%;
             /* not full width, so it centers better */
             /* height: 100%; */
