--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -23,7 +23,7 @@
         }
 
         .boxbar {
-            background: url(../Background1.jpg);
+            /*background: url(../Background1.jpg);*/
             width: 100%;
             /* not full width, so it centers better */
             /* height: 100%; */
