--- a/Demo/demo.html
+++ b/Demo/demo.html
@@ -7,136 +7,8 @@
     <title>Bhagavad Gita</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./style.css"> -->
-    <style>
-        .navbox {
-            width: 100%;
-            height: auto;
-            /* background-color: aqua; */
-            position: fixed;
-            z-index: 1000;
-        }
-
-        nav {
-            background: linear-gradient(to right, #ececc5, #f8c971);
-            /* position: sticky; */
-        }
-
-        .boxbar {
-            /*background: url(../Background1.jpg);*/
-            width: 100%;
-            /* not full width, so it centers better */
-            /* height: 100%; */
-            z-index: 1;
-            padding: 17vh 0 5vh 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            /* center horizontally */
-            /* center vertically */
-
-        }
-
-
-        .bodypart {
-            background-color:whitesmoke;
-            z-index: 2;
-            /* padding: 0vh 3vh; */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        a {
-            text-decoration: none;
-            color: black;
-        }
-
-        .abc {
-            transition: all 0.3s;
-        }
-
-        .abc:hover {
-            border: 1px solid #ffa600;
-            transform: scale(1.0001);
-            box-shadow: 0 14px 18px rgba(26, 25, 25, 0.2);
-        }
-
-        .box1 {
-            position: sticky;
-            top: 0px;
-        }
-
-        .card-ch {
-            color: #ffa600;
-        }
-
-        .CS {
-            font-size: 2.8vh;
-            line-height: 1.8;
-        }
-
-        .pqr {
-            transition: all 0.3s;
-        }
-
-        .pqr:hover {
-            background-color: #f8f9fa;
-            box-shadow: 0 0 20px 1px rgba(26, 25, 25, 0.2);
-            border-radius: 0.5rem;
-        }
-
-        .mainCh {
-            padding: 0vh 15vh;
-            text-align: center;
-        }
-
-        .box {
-            width: 80%;
-            font-size: larger;
-        }
-
-        .slok {
-            padding: 0vh 47vh;
-        }
-
-        @media screen and (max-width: 991px) {
-            .text {
-                /* display: none; */
-            }
-
-            .boxbar {
-                /* display: block; */
-                /* width: 150%; */
-                /* height: 100vh; */
-                /* background-color: aqua; */
-                padding: 13vh 0vh 2vh 0vh;
-            }
-
-            .box {
-                width: 100%;
-            }
-
-            .pqr {
-                padding: 0vh;
-                margin: 0vh;
-            }
-
-            .slok {
-                padding: 0vh;
-                font-size: medium;
-            }
-
-            .mainCh {
-                padding: 0vh 2vh;
-            }
-
-            .CS {
-                font-size: 2.3vh;
-                line-height: normal;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../bhagavadgita/src/component/chsty.css">
 </head>
 
 <body>
@@ -152,35 +24,57 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown
+                                Chapter
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/1.html">Chapter 1</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/2.html">Chapter 2</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/3.html">Chapter 3</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/4.html">Chapter 4</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/5.html">Chapter 5</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/6.html">Chapter 6</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/7.html">Chapter 7</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/8.html">Chapter 8</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/9.html">Chapter 9</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/10.html">Chapter 10</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/11.html">Chapter 11</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/12.html">Chapter 12</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/13.html">Chapter 13</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/14.html">Chapter 14</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/15.html">Chapter 15</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/16.html">Chapter 16</a>
+                                </div>
+                                <div class="row">
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/17.html">Chapter 17</a>
+                                    <a class="col m-1 col-ch abc rounded border border-1" href="../Chapter/18.html">Chapter 18</a>
+                                </div>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="./quotes.html">Quotes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./aboutgita.html">About Gita</a></li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
